src/job_tracker/objects/JobApplication__c/JobApplication__c.object-meta.xml
<CustomObject>
    <description>Created for CCA Capstone Demo</description>
    <label>Job Application</label>
    <nameField>
        <label>Job Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>