src/job_tracker/objects/JobApplication__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <inlineHelpText>Date Application Submitted</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>