src/job_tracker/objects/JobApplication__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <inlineHelpText>Date to follow up o application</inlineHelpText>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>