src/job_tracker/objects/JobApplication__c/fields/Link_To_Posting__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Posting__c</fullName>
    <label>Link To Posting</label>
    <type>Url</type>
</CustomField>