src/job_tracker/objects/JobApplication__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <inlineHelpText>Title of position applied for</inlineHelpText>
    <label>Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>