src/job_tracker/objects/JobApplication__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <inlineHelpText>Expected Salary For Position</inlineHelpText>
    <label>Salary</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>